--- a/src/Makefile
+++ b/src/Makefile
@@ -17,7 +17,7 @@ _OBJ = romano.o main.o
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 $(ODIR)/%.o: %.cpp $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CC) -g -c -o $@ $< $(CFLAGS)
 
 all: romano testa_romano
 
